Fixed errors on landing page

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: &#712; &aelig; &#108; &#618; &#115; &#601; &#110;  # the website title (if blank, full name will be used instead)
+title: Alison Kim # the website title (if blank, full name will be used instead)
 first_name: Alison
 middle_name: Y.
 last_name: Kim
