Minor change to home page

--- a/_config.yml
+++ b/_config.yml
@@ -2,13 +2,13 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Alison Kim # the website title (if blank, full name will be used instead)
+title: # the website title (if blank, full name will be used instead)
 first_name: Alison
 middle_name: Y.
 last_name: Kim
 email: alisonyong-ju.kim@uzh.ch
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  M.A. Student in Digital Linguistics @ University of Zurich
+  Welcome to my personal site!s
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
@@ -29,7 +29,7 @@ impressum_path:  # set to path to include impressum link in the footer, use the 
 # will use title and url fields
 # Take a look to https://github.com/jekyll/jekyll-feed for more customization
 
-rss_icon: true
+rss_icon: false
 
 # -----------------------------------------------------------------------------
 # Layout
