--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: # the website title (if blank, full name will be used instead)
+title: Alison Kim # the website title (if blank, full name will be used instead)
 first_name: Alison
 middle_name: Y.
 last_name: Kim
