Edited home page

--- a/_config.yml
+++ b/_config.yml
@@ -2,13 +2,13 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Alison Kim # the website title (if blank, full name will be used instead)
+title: blank # the website title (if blank, full name will be used instead)
 first_name: Alison
 middle_name: Y.
 last_name: Kim
 email: alisonyong-ju.kim@uzh.ch
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  Welcome to my personal site!s
+  Welcome to my personal site!
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
