--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ footer_text: >
 keywords: # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: &#58430; # (wave emoji) emoji used as the favicon (or: can provide image name in /assets/img/)
+icon: 🌊 # emoji used as the favicon (or: can provide image name in /assets/img/)
 
 url: https://alisonykim.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/
